# simplemma

./: .coveragerc  .gitignore  .travis.yml  404.html  CITATION.cff  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  authors.rst  conf.py  index.html  index.rst  installation.rst  make.bat  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py  tox.ini
.github/workflows/: codeql.yml  tests.yml
contributing/: index.html
credit-and-licenses/: index.html
docs/: contributing.md  credit-and-licenses.md  docs-requirements.txt  index.md  supported-languages.md
docs/css/: mkdocstrings.css
docs/reference/: language_detector.md  lemmatizer.md  token_sampler.md  tokenizer.md  utils.md
docs/reference/strategies/: affix_decomposition.md  default.md  dictionary_lookup.md  greedy_dictionary_lookup.md  hyphen_removal.md  lemmatization_strategy.md  prefix_decomposition.md  rules.md
docs/reference/strategies/dictionaries/: dictionary_factory.md
docs/reference/strategies/fallback/: lemmatization_fallback_strategy.md  raise_error.md  to_lowercase.md
eval/: README.rst  eval-requirements.txt  udscore.py
licenses/: Open_Database_License.txt  Other.txt  PL_License.txt  TR_Source.txt
reference/language_detector/: index.html
reference/lemmatizer/: index.html
reference/strategies/affix_decomposition/: index.html
reference/strategies/default/: index.html
reference/strategies/dictionaries/dictionary_factory/: index.html
reference/strategies/dictionary_lookup/: index.html
reference/strategies/fallback/lemmatization_fallback_strategy/: index.html
reference/strategies/fallback/raise_error/: index.html
reference/strategies/fallback/to_lowercase/: index.html
reference/strategies/greedy_dictionary_lookup/: index.html
reference/strategies/hyphen_removal/: index.html
reference/strategies/lemmatization_strategy/: index.html
reference/strategies/prefix_decomposition/: index.html
reference/strategies/rules/: index.html
reference/token_sampler/: index.html
reference/tokenizer/: index.html
reference/utils/: index.html
search/: search_index.json
simplemma/: __init__.py  __metadata__.py  constants.py  dictionaries.py  dictionary_factory.py  dictionary_pickler.py  langdetect.py  language_detector.py  legacy.py  lemmatizer.py  rules.py  simplemma.py  token_sampler.py  tokenizer.py  utils.py
simplemma/data/: ast.plzma  bg.plzma  ca.plzma  cs.plzma  cy.plzma  da.plzma  de.plzma  el.plzma  en.plzma  enm.plzma  es.plzma  et.plzma  fa.plzma  fi-rules.plzma  fr.plzma  ga.plzma  gd.plzma  gl.plzma  gv.plzma  hbs.plzma  hi.plzma  hu.plzma  hy.plzma  id.plzma  is.plzma  it.plzma  ka.plzma  la.plzma  lb.plzma  lt.plzma  lv.plzma  mk.plzma  ms.plzma  nb.plzma  nl.plzma  nn.plzma  pt.plzma  ro.plzma  ru.plzma  se.plzma  (+8 more)
simplemma/rules/: __init__.py  de.py  en.py  fi.py  generic.py  nl.py  pl.py  ru.py
simplemma/strategies/: __init__.py  affix_decomposition.py  default.py  dictionary_lookup.py  greedy_dictionary_lookup.py  hyphen_removal.py  lemmatization_strategy.py  prefix_decomposition.py  rules.py
simplemma/strategies/defaultprefixes/: __init__.py  de.py  ru.py
simplemma/strategies/defaultrules/: __init__.py  de.py  et.py  fi.py  generic.py  lv.py  pl.py  ru.py
simplemma/strategies/dictionaries/: __init__.py  dictionary_factory.py  trie_dictionary_factory.py  trie_directory_factory.py
simplemma/strategies/dictionaries/data/: ast.plzma  bg.plzma  ca.plzma  cs.plzma  cy.plzma  da.plzma  de.plzma  el.plzma  en.plzma  enm.plzma  eo.plzma  es.plzma  et.plzma  fa.plzma  fr.plzma  ga.plzma  gd.plzma  gl.plzma  gv.plzma  hbs.plzma  hi.plzma  hu.plzma  hy.plzma  id.plzma  is.plzma  it.plzma  ka.plzma  la.plzma  lb.plzma  lt.plzma  lv.plzma  mk.plzma  ms.plzma  nb.plzma  nl.plzma  nn.plzma  pt.plzma  ro.plzma  ru.plzma  se.plzma  (+7 more)
simplemma/strategies/fallback/: __init__.py  default.py  lemmatization_fallback_strategy.py  raise.py  raise_error.py  to_lowercase.py
supported-languages/: index.html
tests/: __init__.py  test_dictionaries.py  test_dictionary_factory.py  test_dictionary_pickler.py  test_langdetect.py  test_language_detector.py  test_lemmatizer.py  test_rules.py  test_simplemma.py  test_token_sampler.py  test_tokenizer.py  udscore.py
tests/data/: zz.txt
tests/rules/: test_de.py  test_en.py  test_fi.py  test_nl.py  test_ru.py  test_rules.py
tests/strategies/: test_strategies.py
tests/strategies/defaultprefixes/: test_prefixes_de.py  test_prefixes_ru.py
tests/strategies/defaultrules/: test_de.py  test_en.py  test_fi.py  test_nl.py  test_rules.py
tests/strategies/dictionaries/: test_dictionary_factory.py  test_trie_dictionary_factory.py
training/: README.rst  dictionary_pickler.py  download-eval-data.py  evaluate_simplemma.py  requirements.txt
training/eval/: udscore.py
